--- a/Dockerfile.compose
+++ b/Dockerfile.compose
@@ -4,13 +4,15 @@ ARG YQ_VERSION=4
 FROM mikefarah/yq:$YQ_VERSION AS yq
 FROM docker:dind$DOCKER_VERSION AS base
 FROM docker/compose:$COMPOSE_VERSION AS compose
-ARG ADDED_PACKAGES='bash openssl ca-certificates jq'
+ARG ADDED_PACKAGES='bash openssl ca-certificates jq curl'
 ENV DC=/usr/local/bin/docker-compose
 RUN --mount=type=bind,from=yq,target=/s cp /s/usr/bin/yq /usr/bin
+ADD add_buildx.sh /tmp/
 RUN --mount=type=bind,from=base,target=/s \
     set -ex;\
     apk add --update-cache $ADDED_PACKAGES && rm -rf /var/cache/apk/;\
     for i in /var/lib/docker /usr/local/sbin;do mkdir $i||true;done;\
+    /tmp/add_buildx.sh;\
     mv -vf /usr/local/bin/docker-compose /usr/local/sbin;\
     cp -rfv /s/usr/libexec/docker /usr/libexec;\
     cp -rvf /s/usr/local/bin/* /usr/local/bin
