--- a/Dockerfile.docker
+++ b/Dockerfile.docker
@@ -4,7 +4,7 @@ ARG YQ_VERSION=4
 FROM mikefarah/yq:$YQ_VERSION AS yq
 FROM docker/compose:$COMPOSE_VERSION AS compose
 FROM docker:$DOCKER_VERSION AS base
-ARG ADDED_PACKAGES='bash openssl ca-certificates jq curl'
+ARG ADDED_PACKAGES='bash openssl ca-certificates jq curl git'
 ENV DC=/usr/local/bin/docker-compose
 RUN --mount=type=bind,from=yq,target=/s cp /s/usr/bin/yq /usr/bin
 ADD add_buildx.sh /tmp
