--- a/Dockerfile.docker
+++ b/Dockerfile.docker
@@ -1,5 +1,6 @@
 ARG COMPOSE_VERSION=1.29.2
-ARG DOCKER_VERSION=latest
+ARG DOCKER_VERSION=20.10
+ARG DIND_VERSION=$DOCKER_VERSION
 ARG YQ_VERSION=4
 FROM mikefarah/yq:$YQ_VERSION AS yq
 FROM docker/compose:$COMPOSE_VERSION AS compose
