--- a/Dockerfile.registryproxy
+++ b/Dockerfile.registryproxy
@@ -2,10 +2,11 @@ ARG BASE_IMAGE="docker.io/rpardini/nginx-proxy-connect-stable-alpine:nginx-1.20.
 ARG BASE_IMAGE_SUFFIX=""
 ARG COMPOSE_VERSION=1.29.2
 ARG REGISTRYCACHE_VERSION=latest
-ARG DIND_VERSION=
+ARG DOCKER_VERSION=20.10
+ARG DIND_VERSION=$DOCKER_VERSION
 ARG YQ_VERSION=4
 FROM mikefarah/yq:$YQ_VERSION AS yq
-FROM docker:dind$DOCKER_VERSION AS base
+FROM docker:$DOCKER_VERSION-dind AS base
 FROM docker/compose:$COMPOSE_VERSION AS compose
 # We start from my nginx fork which includes the proxy-connect module from tEngine
 # Source is available at https://github.com/rpardini/nginx-proxy-connect-stable-alpine
