--- a/Dockerfile.registryproxy.pre
+++ b/Dockerfile.registryproxy.pre
@@ -1,7 +1,8 @@
 ARG COMPOSE_VERSION=1.29.2
 ARG REGISTRYCACHE_VERSION=latest
-ARG DIND_VERSION=
+ARG DOCKER_VERSION=20.10
+ARG DIND_VERSION=$DOCKER_VERSION
 ARG YQ_VERSION=4
 FROM mikefarah/yq:$YQ_VERSION AS yq
-FROM docker:dind$DOCKER_VERSION AS base
+FROM docker:${DIND_VERSION}-dind AS base
 FROM docker/compose:$COMPOSE_VERSION AS compose
