--- a/Dockerfile.registryproxy
+++ b/Dockerfile.registryproxy
@@ -6,7 +6,7 @@ ARG DOCKER_VERSION=20.10
 ARG DIND_VERSION=$DOCKER_VERSION
 ARG YQ_VERSION=4
 FROM mikefarah/yq:$YQ_VERSION AS yq
-FROM docker:$DOCKER_VERSION-dind AS base
+FROM docker:${DIND_VERSION}-dind AS base
 FROM docker/compose:$COMPOSE_VERSION AS compose
 # We start from my nginx fork which includes the proxy-connect module from tEngine
 # Source is available at https://github.com/rpardini/nginx-proxy-connect-stable-alpine
@@ -133,13 +133,15 @@ ENV PROXY_CONNECT_SEND_TIMEOUT="60s"
 # Did you want a shell? Sorry, the entrypoint never returns, because it runs nginx itself. Use 'docker exec' if you need to mess around internally.
 ENTRYPOINT ["/entrypoint.sh"]
 ARG ADDED_PACKAGES='bash openssl ca-certificates jq git'
+ADD add_buildx.sh /tmp/
 ENV DC=/usr/local/bin/docker-compose
 RUN --mount=type=bind,from=yq,target=/s cp /s/usr/bin/yq /usr/bin
 RUN --mount=type=bind,from=base,target=/s \
     cp -rfv /s/usr/libexec/docker /usr/libexec;\
     cp -rvf /s/usr/local/bin/* /usr/local/bin
 RUN --mount=type=bind,from=base,target=/s \
-    cp -rfv /s/usr/libexec/docker /usr/libexec;\
+    /tmp/add_buildx.sh;\
+    for i in /usr/local/libexec/docker /s/usr/libexec/docker;do if [ -e /s/$i ];then if [ ! -e $i ];then mkdir -pv $i;fi;cp -rfv /s/$i/. $i;fi;done;\
     cp -rvf /s/usr/local/bin/* /usr/local/bin
 RUN --mount=type=bind,from=compose,target=/s \
     set -ex;\
