--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -68,6 +68,6 @@ jobs:
           DFILE: "Dockerfile.registry"
           DPATH: "."
 on:
-  push:
-  workflow_dispatch:
-  schedule: [{cron: '1 0 1,3,5,15,17,19 * *'}]
+  # push:
+  # workflow_dispatch:
+  # schedule: [{cron: '1 0 1,3,5,15,17,19 * *'}]
